2010-08-13
 - removing of items from the QGraphicsScene/QGraphicsView is implemented:
      classes which were change in order to make removeRows work:
      Model::removeRows(..)       
      |-DataAbstractItem
      | |-DataRoot
      | |-DataAbstractModule
      | |-DataPort
      | |-DataProperty
      | |-DataConnection
      |-ItemView (relay)         
      | |-rowsAboutToBeRemoved
      |-GraphicsScene
      | |-moduleRemoved       
      | |-connectionRemoved   
2010-08-12
 - DataType.h vs DataItemType.h, actually DataType.h lost and was removed
2010-08-11
 - QTreeView show items always expanded, see MainWidget.cpp::changeActiveDocument ( Document* doc )
 - fixed loop connection handling bug where two modules could be connection in a way they would form a loop
 - QMenu for creating modules does now insert the module on x,y where the QMenu was created instead of QCursor::pos()
 - QMenu for creating modules has now categories which makes it far more useful, see:
     void GraphicsScene::contextMenuEvent ( QGraphicsSceneContextMenuEvent * contextMenuEvent )
 - created all modules which are in libnoise using the class_generator.py
 - added a class_generator.py
2010-08-10
 - reorganizing modules/
 - renamed property 'pos' to 'Position'
 - removed dependancy to noise.h and -lnoise from the backend modules
   (this will be done differently soon)
2010-08-09 
 - Model::setData(..) implemented
 - Model::flags(..) implemented
 - added a new interface screenshot, see screenshots/
2010-08-07
 - module->property() and module->setProperty() work! *yepee*
 - fix crash when clicking QTreeView item which does not have a QGraphicsItem associated
 - this is an incomplete commit, more or less a momentum of my codebase
 - the data backend does now have a DataProperty
 - the QListView was replaced by a QTreeView
 - currently some things are broken since code has to be adapted to that the new property system will be used
 - reassigned many things, see TODO
2010-08-04